Issue #6939: Fix file I/O objects in the `io` module to keep the original file position when calling `truncate()`.  It would previously change the file position to the given argument, which goes against the tradition of `ftruncate()` and other truncation APIs.  Patch by Pascal Chambon.